--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="right"></div>
             <div class="bottom"></div>
             <div class="left"></div>
+            <div class="center"></div>
             <div class="hour"></div>
             <div class="minute"></div>
             <div class="second"></div>
