Update page (finished)

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/icon-font.css">
+    <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-    <link rel="stylesheet" href="css/icon-font.css" type="text/css">
+    <!-- <link rel="stylesheet" href="css/icon-font.css" type="text/css"> -->
 
     <title>Natours | Exciting tours for adventurous people</title>
 </head>
@@ -74,9 +74,24 @@
                 </div>
                 <div class="flexbox-img">
                     <div class="composition">
-                        <img src="img/nat-1-large.jpg" alt="" class="composition__photo composition__photo--p1">
+                        <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" 
+                        sizes="(max-width: 900px) 40vw, (max-width: 600px) 27vw, 300px"
+                        src="img/nat-1-large.jpg" 
+                        alt="photo-1" class="composition__photo composition__photo--p1">
+
+                        <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" 
+                        sizes="(max-width: 900px) 40vw, (max-width: 600px) 27vw, 300px"
+                        src="img/nat-2-large.jpg" 
+                        alt="photo-2" class="composition__photo composition__photo--p2">
+
+                        <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" 
+                        sizes="(max-width: 900px) 40vw, (max-width: 600px) 27vw, 300px"
+                        src="img/nat-3-large.jpg" 
+                        alt="photo-3" class="composition__photo composition__photo--p3">
+                        
+                        <!-- <img src="img/nat-1-large.jpg" alt="" class="composition__photo composition__photo--p1">
                         <img src="img/nat-2-large.jpg" alt="" class="composition__photo composition__photo--p2">
-                        <img src="img/nat-3-large.jpg" alt="" class="composition__photo composition__photo--p3">
+                        <img src="img/nat-3-large.jpg" alt="" class="composition__photo composition__photo--p3"> -->
                     </div>
                 </div>
             </div>
@@ -130,7 +145,8 @@
                         <div class="section-tours__card-picture section-tours__card-picture-1">&nbsp;</div>
                         <h4 class="section-tours__card-heading">
                             <span class="section-tours__card-heading-span section-tours__card-heading-span--1">
-                                 The Sea <br> Exploer    <!-- on desktop computer add <br>  -->
+                                The Sea <br> Exploer
+                                <!-- on desktop computer add <br>  -->
                             </span>
                         </h4>
                         <div class="section-tours__card-details">
@@ -320,7 +336,11 @@
 
     <footer class="footer">
         <div class="footer__logo-box">
-            <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+            <picture class="footer__logo">
+                <source srcset="./img/logo-green-small-1x.png 1x, ./img/logo-green-small-2x.png 2x"
+                    media="(max-width: 600px)">
+                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" src="img/logo-green-2x.png">
+            </picture>
         </div>
         <div class="flexbox u-width-flexbox-big flex-between">
             <div class="footer__container">
@@ -336,7 +356,9 @@
             </div>
             <div class="footer__container">
                 <p class="footer__copyright">
-                    Build bRa bra...
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae expedita praesentium, vel, molestiae
+                    error deleniti modi ratione ducimus fugiat aperiam sint, non animi odit ipsa inventore impedit
+                    suscipit officia fugit.
                 </p>
             </div>
         </div>
@@ -351,13 +373,14 @@
             <div class="popup__right">
                 <a href="#section-tours" class="popup__close">&times;</a>
                 <h2 class="heading-secondary u-margin-bottom-medium">Start booking now</h2>
-                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before
+                    booking</h3>
                 <p class="popup__text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </p>
                 <a href="" class="btn btn--green u-margin-top-medium">Book now</a>
             </div>
